[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["zh3036 <zh3036@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
openai = "^1.3"
langflow = "1.0.10"
langgraph = "^0.1.8"
langsmith = "^0.1.90"
langchain-anthropic = "^0.1.20"
typing-extensions = "^4.12.2"
ipython = "^8.26.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"